add html elements

--- a/2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html
+++ b/2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html
@@ -1,1 +1,13 @@
 <!-- Write your code below -->
+<h1>The Best Movies According to Wilson</h1>
+<h2>My Top 3 Movies of all-time.</h2>
+
+<hr />
+
+
+<h3>Christian Movies based on US</h3>
+<p>This are the fantastic movies which explains about the life of faith for Christians.</p>
+<h3>The Bible</h3>
+<p>This is my favorite movie which explains about the Bible.</p>
+<h3>Jumong</h3>
+<p>This is my favorite corean movie of all my time.</p>
