add html contents in index.html

--- a/3.2+Anchor+Elements/3.2 Anchor Elements/index.html
+++ b/3.2+Anchor+Elements/3.2 Anchor Elements/index.html
@@ -1,2 +1,9 @@
 <h1>My top 5 Favourite Websites</h1>
 <!-- Write your code below -->
+<ol>
+    <li><a href="http://www.Product hunt.com">Product Hunt</a></li>
+    <li><a href="http://www.Smash the walls.com">Smash the Walls</a></li>
+    <li><a href="http://www.Wordle.com">Wordle</a></li>
+    <li><a href="http://www.Hacker Typer.com">Hacker Typer</a></li>
+    <li><a href="http://www.Stellarium.com">Stellarium</a></li>
+</ol>
