add html contents

--- a/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/about.html
+++ b/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/about.html
@@ -1,20 +1,21 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>I'm Wilson Vicent from Dar es salaam, Tanzania. currently i'm 26 years old, and i'm doing my masters degree in Data Science
+  from the University of Dar es salaam. I have a passion for web development and data science. I have been working as an intern at
+  the University of Dar es salaam for the past 6 months. I have been working on various projects including web development and data science.
+  I have a passion for learning new things and i'm always looking for new challenges. I'm a hardworking and dedicated person who is always
+  looking for new opportunities to grow and develop my skills. I'm always looking for new opportunities to work with other people and learn
+  from them. I'm a team player and i'm always willing to help others. I'm a quick learner and i'm always looking for new ways to improve my 
+  skills.
+</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+<p> My personal mission is to be an agent of change, make differences, and creating impacts. I believe that everyone has the potential to
+  make a difference in the world and i'm always looking for ways to make a positive impact on the world. I'm always looking for ways to help
+  others and make the world a better place. I believe that technology has the power to change the world and i'm always looking for ways to use
+  technology to make a positive impact on the world. I'm always looking for ways to use my skills and knowledge to help others and make the world
+  a better place.
+</p>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+<p> Innovation is one of the key drivers of change and i'm always looking for ways to innovate and create new things. I believe that innovation
+  is the key to solving the world's problems and i'm always looking for ways to innovate and create new solutions to the world's problems. I'm
+  always looking for ways to use my skills and knowledge to create new things and make the world a better place. 
+</p>
