--- a/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/movie-ranking.html
+++ b/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/movie-ranking.html
@@ -1,9 +1,18 @@
-<h1>The Best Movies According to Angela</h1>
+<h1>The Best Movies According to Wilson</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h3>The Bible</h3>
+<p>This is my favourite bible movie. I love the story. It's so inspiring and beautiful
+    to watch. I love the characters and the acting is amazing. The special effects are
+    also really cool. I love the music too. It's just a really great movie overall.
+</p>
+<h3>Christian Movies</h3>
+<p> The movie contains Christian messages. It's a really good movie. I love the story
+    and the characters. The acting is really good. The special effects are also really
+    cool. I love the music too. It's just a really great movie overall.
+</p>
+<h3>The Fresh Year</h3>
+<p>The movie is for fresh year Christian in the college. It's a really good movie. I love
+    the story and the characters. The acting is really good. The special effects are also
+    really cool. I love the music too. It's just a really great movie overall.
+</p>
