--- a/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/contact.html
+++ b/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +255757650442</p>
+<p>Email: vicentwilson04@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  11 Mabibo, Dar es salaam<br />
+  Dar es salaam<br />
+  Tanzania<br />
 </p>
