add index.html contennts for my resume

--- a/Capstone-Project-1/index.html
+++ b/Capstone-Project-1/index.html
@@ -6,6 +6,172 @@
     <title>My Resume</title>
 </head>
 <body>
-    
+<h1>Vicent Wilson W</h1>
+<p> Phone: +255757650442 | Email: <a href="vicentwilson04@gmail.com">vicentwilson04@gmail.com</a> | Dar es Salaam, Tanzania</p>
+Github repository: <a href="https://github.com/msonzela"> https://github.com/msonzela</a>
+</p>
+<h3>SUMMARY</h3>
+<P>Visionary, focused and determined to give my best with a high level of integrity and diligence.</P>
+<h3>EDUCATION BACKGROUND</h3>
+
+<h6>UNIVERSITY OF DAR ES SALAAM | COLLEGE OF INFORMATION & COMMUNICATION TECHNOLOGIES</h6>
+<ul>
+    <li>Bachelor of Science in Computer Science                           |             Nov 2018 - Jul 2021</li>
+</ul>
+<h6>SONGEA BOYS SECONDARY SCHOOL  | ACSEE  | PCM                          |             Jun 2016  - May 2018</h6>
+<h6>MWALIMU NYERERE SECONDARY SCHOOL | CSEE                               |             Jan 2012 - Nov 2015</h6>
+<h6>SEGESE 'A' PRIMARY SCHOOL        |                                    |             Jan 2005 - Sept 2011</h6>
+
+<h3>PROFESSIONAL EXPERIENCE</h3>
+<hr />
+<h4>Software Innovator Intern  | UNICEF(Y4C)                | Jan 2022- June 2023</h4>
+<ul>
+    <li>
+        Worked on a challenge on how to generate evidence of specific determinants of malnutrition for 
+        school-aged children and adolescents in Tanzania. (Worked with a team of 3).
+    </li>
+    <li>
+        Developed an Automatic BMI calculator for gathering data on the indicators of malnutrition.
+    </li>
+    <li>
+        Developed a Visualization platform for displaying the indicators of malnutrition collected by the Automatic BMI calculator.
+    </li>
+</ul>
+
+<h4>Software Developer Intern    | Inventions Technologies Co.Ltd       | Agu 2021 - Oct 2021</h4>
+<ul>
+    <li>Developed a Leave Management System for the Company using Laravel</li>
+    <li>Developed a business using an Enterprise resource planning sytem (Odoo)</li>
+    <li>Provision of IT support and maintenance for the call centers.</li>
+
+</ul>
+
+<h4>Software Innovator Intern   | UNICEF (Y4C)                     | Aug 2020 - March 2021</h4>
+<ul>
+<li>Worked on the challenge of malnutrition for school-aged children and adolescents.</li>
+<li>Researched to understand the awareness of malnutrition for school-aged children and adolescents
+    in both governement and non-governement institutions</li>
+<li>Collected data, analyzed them and documented sample feedback</li>
+<li>Proposed various solutions on how to raise awareness of malnutrition.</li>
+</ul>
+<h4>Database Administrator   | UNICEF(Y4C)            | Aug 2019 - Jul 2020 </h4>
+<ul>
+    <li>Collected and managed large volumes of data from various sources.</li>
+    <li>Ensured data quality and integrity through regular data cleansing and validation processes.</li>
+    <li>Developed and implemented efficient data storage and retrieval systems.</li>
+    <li>Performed data analysis to identify trends, patterns, and insights.</li>
+    <li>Generated reports and visualizations to communicate findings and provide actionable recommendations.</li>
+    <li>Collaborated with cross-functional teams to understand data requirements and provide database solutions</li>
+    <li>Monitored database Performance and implemented optimization strategies.</li>
+    <li>Conducted regular backups and implemented optimization strategies.</li>
+    <li>Worked closely with IT teams to ensure database security and compliance with data protection regulations.</li>
+    <li>Documented data management processes and created guidelines for data entry, retrieval, and usage.</li>
+    <li>Provided training and support to users on database systems and tools.</li>
+</ul>
+
+<h4>OTHER EXPERIENCE</h4>
+<h5>SCIENCE, TECHNOLOGIES AND INNOVATION CONFERENCE AND EXHIBITION  | COSTECH</h5>
+<ul>
+    <li>Exhibition     |  2023</li>
+    <li>Partcipated in exhibition of Malnutrition Project.</li>
+</ul>
+<h5>UNIVERSITY OF DAR ES SALAAM COLLEGE EXHIBITION.</h5>
+<ul>
+    <li>Exhibitor     |  2023</li>
+    <li>Partcipated in organizing exhibition of different projections.</li>
+</ul>
+<h5>DATA TAMASHA</h5>
+<ul>
+    <li>Volunteer | 2021</li>
+    <li>Organized and participated in Data Tamasha 2021</li>
+</ul>
+<h5>U-REPORT AND RAPID PRO VIRTUAL HACKATHON.</h5>
+<ul>
+    <li>Active Member   | 2021</li>
+    <li>Participated in ideating prototypes during the hackathon.</li>
+</ul>
+
+<h3>PROFESSIONAL SKILLS</h3>
+<ul>
+    <li>Database administration:
+        <ul>
+            <li>Compentent in SQL, MySQL, SQL Server, and Oracle.</li>
+            <li>Proficient in database design, implementation, and maintenance.</li>
+            <li>Skilled in performanc turnig and optimization.</li>
+            <li>Experienced in data backup and recovery strategies.</li>
+        </ul>
+    </li>
+    <br />
+    <li>
+        Web Full Stack Development:
+        <ul>
+            <li>Competent in web development technologies including HTML, CSS, JavaScript, and PHP.</li>
+            <li>Proficient in working with frameworks such as Laravel.</li>
+            <li>Experienced in front-end development using React or Angular.</li>
+            <li>Skilled in back-end development using Node.js.</li>
+            <li>Familiarity with RESTful APIs and JSON.</li>
+        </ul>
+    </li>
+    <br />
+    <li>
+        Programming Languages:
+        <ul>
+            <li>Proficient in languages such as Python, Java, and C++.</li>
+            <li>Competent in scripting languages like JavaScript and PHP.</li>
+        </ul>
+    </li>
+    <br />
+    <li>
+      Basic computer skills:
+      <ul>
+        <li>Introduction to computer, Microsoft Office (Word, Excel, PowerPoint).</li>
+        <li>Proficient in utilizing productivity tools for documentation and presentation.</li>
+        <li>Thorough understanding of computer hardware and Software:</li>
+        <li>Experience in working with various parts of the Software development cycle.</li>
+        <li>Familiarity with system architectures and components.</li>
+      </ul>  
+    </li>
+    <br />
+    <li>
+        Solid background in mathematics , analysis, and problem-solving:
+    </li>
+    <br />
+    <li>
+        Ability to analyze complex problems and provide effective solutions.
+    </li>
+    <br />
+    <li>Proficient in mathematical concepts and logical reasoning.</li>
+</ul>
+
+<h3>INTER-PERSONAL SKILLS</h3>
+<ul>
+    <li>Team Player.</li>
+    <li>Strong Communication skills.</li>
+    <li>Time management and organizational skills.</li>
+
+</ul>
+<br />
+<h3>LANGUAGES</h3>
+<li><a href="English">English</a>           <a href="Swahili">Swahili</a>  | Fluent in both.
+</li>
+<br />
+<h3>HOBBIES AND INTERESTS</h3>
+<ul>
+    <li>Traveling</li>
+    <li>Sports (Football, Jogging, Racing)</li>
+    <li>Community Service</li>
+    <li>Reading and watching documentaries.</li>
+</ul>
+<br />
+
+<h2>REFERENCES</h2>
+<hr>
+<p>Dr. Hellen Maziku</p>
+<p>Position: Senior Lecturer | College of Information and Communication Technologies   | UDSM E-mail: <a href="nahelna@gmail.com">nahelna@gmail.com</a> </p>
+<p>Cell Phone: +255717743350</p>
+<br />
+<p>Dr. Joseph C Mushi</p>
+<p>Position: Senior Lecturer | College of Information and Communication Technologies   | UDSM E-mail: <a href="mushyjc@gmail.com">nahelna@gmail.com</a> </p>
+Cell Phone: +255754557744 / +255684697697
 </body>
 </html>
