add images folder

--- a/Capstone-Project-1/index.html
+++ b/Capstone-Project-1/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Vicent Wilson W</h1>
+<img src="./images/Vicent.gif" alt="Vicent image">
 <p> Phone: +255757650442 | Email: <a href="vicentwilson04@gmail.com">vicentwilson04@gmail.com</a> | Dar es Salaam, Tanzania</p>
 Github repository: <a href="https://github.com/msonzela"> https://github.com/msonzela</a>
 </p>
@@ -14,13 +15,13 @@ Github repository: <a href="https://github.com/msonzela"> https://github.com/mso
 <P>Visionary, focused and determined to give my best with a high level of integrity and diligence.</P>
 <h3>EDUCATION BACKGROUND</h3>
 
-<h6>UNIVERSITY OF DAR ES SALAAM | COLLEGE OF INFORMATION & COMMUNICATION TECHNOLOGIES</h6>
+<h5>UNIVERSITY OF DAR ES SALAAM | COLLEGE OF INFORMATION & COMMUNICATION TECHNOLOGIES</h5>
 <ul>
     <li>Bachelor of Science in Computer Science                           |             Nov 2018 - Jul 2021</li>
 </ul>
-<h6>SONGEA BOYS SECONDARY SCHOOL  | ACSEE  | PCM                          |             Jun 2016  - May 2018</h6>
-<h6>MWALIMU NYERERE SECONDARY SCHOOL | CSEE                               |             Jan 2012 - Nov 2015</h6>
-<h6>SEGESE 'A' PRIMARY SCHOOL        |                                    |             Jan 2005 - Sept 2011</h6>
+<h5>SONGEA BOYS SECONDARY SCHOOL  | ACSEE  | PCM                          |             Jun 2016  - May 2018</h5>
+<h5>MWALIMU NYERERE SECONDARY SCHOOL | CSEE                               |             Jan 2012 - Nov 2015</h5>
+<h5>SEGESE 'A' PRIMARY SCHOOL        |                                    |             Jan 2005 - Sept 2011</h5>
 
 <h3>PROFESSIONAL EXPERIENCE</h3>
 <hr />
