--- a/Capstone-Project-1/index.html
+++ b/Capstone-Project-1/index.html
@@ -165,7 +165,7 @@ Github repository: <a href="https://github.com/msonzela"> https://github.com/mso
 </ul>
 <br />
 
-<h2>REFERENCES</h2>
+<h3>REFERENCES</h3>
 <hr>
 <p>Dr. Hellen Maziku</p>
 <p>Position: Senior Lecturer | College of Information and Communication Technologies   | UDSM E-mail: <a href="nahelna@gmail.com">nahelna@gmail.com</a> </p>
@@ -175,4 +175,9 @@ Github repository: <a href="https://github.com/msonzela"> https://github.com/mso
 <p>Position: Senior Lecturer | College of Information and Communication Technologies   | UDSM E-mail: <a href="mushyjc@gmail.com">nahelna@gmail.com</a> </p>
 Cell Phone: +255754557744 / +255684697697
 </body>
+<br  />
+<br />
+<footer>
+    <p>&copy; 2024 Vicent Wilson. All rights reserved.</p>
+</footer>
 </html>
