--- a/6.0+CSS+Colors/6.0 CSS Colors/index.html
+++ b/6.0+CSS+Colors/6.0 CSS Colors/index.html
@@ -6,6 +6,18 @@
   <title>Colors</title>
   <style>
   /* Write your CSS code here. */
+  body{
+  background-color:anticquewhite;
+  }
+  h1{
+    color: whitesmoke;
+    background-color: darkseagreen;
+  }
+  h2{
+    color: #FAF8F1;
+    background-color: #C58940;
+  }
+
     /* 1. Make the background of the webpage "antiquewhite"
     2. Make the h1 "whitesmoke"
     3. Make the background of the h1 "darkseagreen"
