--- a/6.1+Font+Properties/index.html
+++ b/6.1+Font+Properties/index.html
@@ -5,26 +5,48 @@
   <meta charset="UTF-8">
   <title>CSS Properties</title>
   <style>
+    html {
+      font-size: 30px;
+    }
     body {
       background-color: cornflowerblue;
       color: white;
       font-size: 18px;
     }
+    #align {
+      text-align: right;
+    }
+    #family {
+      font-family: 'Caveat', cursive;
+    }
+    #weight {
+      font-weight: 900;
+    }
+    #size {
+      font-size: 2rem;
+    }
+    #color {
+      color: coral;
+    }
+
 
     /* Don't change the CSS above, add Your CSS below */
 
     
   </style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   <h1>Important CSS Properties</h1>
-  <p>Color</p>
-  <p>Font Size</p>
-  <p>Font Weight</p>
-  <p>Font Family</p>
-  <p>Text Align</p>
-
+ <p id="color">Color</p>
+  <p id="size">Font Size</p>
+  <p id="weight">Font Weight</p>
+  <p id="family">Font Family</p>
+  <p id="align">Text Align</p>
   <!-- TODOs
   1. Change the color of <p>Color</p> to "coral" color.
   2. Change the font size of <p>Font Size</p> to 2X the size of the root font size.
