--- a/7.2+CSS+Positioning/7.2 CSS Positioning/index.html
+++ b/7.2+CSS+Positioning/7.2 CSS Positioning/index.html
@@ -5,6 +5,23 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+  .red-circle {
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    border-radius: 50%;
+    top: 150px;
+    left: 250px;
+    position: absolute;
+  }
+  .blue-box {
+    width: 500px;
+    height: 300px;
+    background-color: blue;
+    position: relative;
+    top: 200px;
+    left: 200px;
+  }
   </style>
 </head>
 
