--- a/8.0+CSS+Display/8.0 CSS Display/index.html
+++ b/8.0+CSS+Display/8.0 CSS Display/index.html
@@ -19,6 +19,8 @@
       width: 200px;
       height: 200px;
       background-color: red;
+      /* display: inline-block; */
+      display: block;
     }
 
     .green {
@@ -26,6 +28,8 @@
       width: 200px;
       height: 200px;
       background-color: green;
+      /* display: inline-block; */
+      display: block;
     }
 
     .blue {
@@ -33,6 +37,8 @@
       width: 200px;
       height: 200px;
       background-color: blue;
+      /* display: inline-block; */
+      display: block;
     }
   </style>
 </head>
