--- a/8.1+CSS+Float/8.1 CSS Float/index.html
+++ b/8.1+CSS+Float/8.1 CSS Float/index.html
@@ -20,16 +20,25 @@
     }
 
     .cat {
+      float: left;
       background-color: aquamarine;
+      
     }
 
     .dog {
+      float: right;
       background-color: coral;
+      
+    }
+
+    img {
+      float: left;
     }
 
     footer {
       text-align: center;
       background-color: blueviolet;
+      clear: both;
     }
   </style>
 </head>
