add Grid properties

--- a/10.1+Grid+Sizing/10.1 Grid Sizing/test.html
+++ b/10.1+Grid+Sizing/10.1 Grid Sizing/test.html
@@ -57,6 +57,9 @@
       background-color: #ddd;
       padding: 20px;
       margin: 2rem;
+      display: grid;
+      grid-template-rows: 1fr 1fr 2fr;
+      grid-template-columns: auto 400px minmax(200px, 500px);
     }
 
     .grid-item {
