add grid properties

--- a/10.2+Grid+Placement/10.2 Grid Placement/exercise2.html
+++ b/10.2+Grid+Placement/10.2 Grid Placement/exercise2.html
@@ -40,6 +40,8 @@
       order: 1;
 
       /* TODO: Make the astronaut box look like the goal2 image. */
+      grid-row: span 2;
+      
 
     }
   </style>
