--- a/11.0+Bootstrap+Intro/11.0 Bootstrap Intro/index.html
+++ b/11.0+Bootstrap+Intro/11.0 Bootstrap Intro/index.html
@@ -6,15 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap</title>
   <!-- TODO 1: Add the Bootstrap link here. -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
   <style>
     /* TODO 4: Use flexbox to center the card in the vertical and horizontal center. */
+    .flex-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
   </style>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
   <div class="flex-container">
     <!-- TODO 2: Add the Bootstrap Prebuilt Card here -->
+    <div class="card" style="width: 18rem;">
+      <img src="flower.jpg" class="card-img-top" alt="image of flower">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
     <!-- TODO 3: Change the image src to display the flower.jpg image. -->
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
   </div>
 </body>
 
